--- a/pom.xml
+++ b/pom.xml
@@ -129,10 +129,9 @@
             <version>4.5.4</version>
         </dependency>
         <dependency>
-            <groupId>kz.as</groupId>
-            <artifactId>registry</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>7.8.2</version>
         </dependency>
 
     </dependencies>
@@ -188,6 +187,15 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>4.0.3</version>
+                <configuration>
+                    <user>postgres</user>
+                    <password>postgres</password>
                 </configuration>
             </plugin>
         </plugins>
