--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>kz.aa</groupId>
     <artifactId>baza</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>war</packaging>
     <name>baza</name>
     <description>Project for the implementation of a registry in Kazakhstan</description>
     <properties>
